# Programmieren-in-C

./: .gitignore  2 First C Program.rar  CMakeLists.txt  README.md
10 Macros/: CMakeLists.txt  Readme.md  debug.h  main.c
11 Routing/: CMakeLists.txt  Readme.md  main.c  route.c  route.h  routing.h  routing_table.c  routing_table.h
12 Serializable Objects/: CMakeLists.txt  Readme.md  file_writer.c  json.c  json.h  linked_list.c  linked_list.h  writer.c  writer.h  writer_private.h
12 Serializable Objects/test/: json_test.c
13_Unity/: CMakeLists.txt  Readme.md  first_test.c
2 First C Program/: .gitignore  CMakeLists.txt  Readme.md  main.c
3 Building C Programs/: .gitignore  CMakeLists.txt  Readme.md  fibonacci.c  fibonacci.h  fibonacci_test.c  fibonacci_test.h  main.c  test.c  test.h
4 Data Types A - Primitive Types/: CMakeLists.txt  exercise.c  exercise.h  main.c
5 Custom Data Types and Variables/: CMakeLists.txt  Readme.md  exercise.c  exercise.h  ieee_float64.h  main.c
5 Data Types and 6 Variables/: CMakeLists.txt  Readme.md  exercise.c  exercise.h  main.c
7 More About Functions/: CMakeLists.txt  Readme.md  exercise.c  exercise.h  main.c
8 Matrices/: CMakeLists.txt  Readme.md  main.c  matrix.c  matrix.h
9 Refactoring/: CMakeLists.txt  Readme.md  main.c  message.c  message.h  network_layer.c  network_layer.h
test_util/: CMakeLists.txt  test.h
test_util/src/: test.c  test.h
