cmake_minimum_required(VERSION 3.15)
project(programming_c C)

set(CMAKE_C_STANDARD 11)

include_directories(./)
add_subdirectory("2 First C Program")
add_subdirectory("3 Building C Programs")
add_subdirectory("4 Data Types A - Primitive Types")
add_subdirectory("5 Data Types and 6 Variables")
add_subdirectory("7 More About Functions")
add_subdirectory("test_util")