cmake_minimum_required(VERSION 3.15)
project(programming_c C)

set(CMAKE_C_STANDARD 11)

include_directories(./)
add_subdirectory("2 First C Program")
add_subdirectory("3 Building C Programs")
add_subdirectory("4 Data Types A - Primitive Types")
add_subdirectory("5 Custom Data Types and Variables")
add_subdirectory("7 More About Functions")
# add_subdirectory("8 Matrices")
# add_subdirectory("9 Refactoring")
# add_subdirectory("10 Macros")
# add_subdirectory("11 Routing")
# add_subdirectory("12 Serializable Objects")
# add_subdirectory("13_Unity")
# #add_subdirectory("external/Unity")
add_subdirectory("test_util")
